scripts/generator/tests/fixtures/dportsv3/invalid/parse/invalid-heredoc-start.dops
mk target set dfly-patch <<MK
cmd
MK
